# OverHAuL

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: benchmark.yml  benchmarks.yml  docs.yml  tests.yml.bak
assets/kvstore/: crash-0322ef618927cbdb5789e28cadc8be82a9f18c42  crash-0372ba58e75dd4680b660752a47d19f3f9e24fa0  crash-12e473943a327fcd9a89bcf68a31a54def124c08  crash-23ed20fdc07652154408cca3f7ce7b56661d4650  crash-2a7f269af01226ba9dfd5d994fd81358229a19e2  crash-52842c86aeaf51f13142444fffab0e746ee51081  crash-5e155aa5338f9bad1f2061b78594553204da93e0  crash-6217f3d198506dcc854e257a93073efe353fa912  crash-950b14ec8685fedd988357eab3abf07576914423  crash-a177a1fb433f00316dd340f775a0fa3a9303d4a0  crash-a2715d59b2e3c10aac9660c22028f012001c60e7  crash-cb56cfdc07ae0f0ef33db661ef5241144fe45cbf  crash-eea9eeab930550f57bfd8bcdc7561b9819bcf641  harness
assets/kvstore/harnesses/: harness.c
benchmarks/: benchmark.sh  repos-mini.txt  repos.txt
docs/: index.html  llm_harness.html  overhaul.html  search.js
docs/llm_harness/: cli.html  config.html  core.html
docs/llm_harness/core/: analyzer.html  builder.html  evaluator.html  generator.html  harnesser.html
docs/llm_harness/io/: file_manager.html
docs/llm_harness/models/: project.html
docs/overhaul/: cli.html  config.html  core.html  io.html  models.html
docs/overhaul/core/: analyzer.html  builder.html  evaluator.html  harnesser.html
docs/overhaul/io/: file_manager.html
docs/overhaul/models/: project.html
src/llm_harness/: cli.py  config.py
src/llm_harness/core/: analyzer.py  builder.py  evaluator.py  generator.py  harnesser.py
src/llm_harness/io/: file_manager.py
src/llm_harness/models/: project.py
src/overhaul/: __init__.py  cli.py  config.py
src/overhaul/core/: analyzer.py  builder.py  chunker.py  evaluator.py  harnesser.py
tests/: test_analyzer.py  test_cli.py  test_file_manager.py  test_generator.py  test_integration.py  test_models.py
(+190 files in other folders)
